--- a/index.html
+++ b/index.html
@@ -6,15 +6,10 @@
         <meta name="viewport" content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
     </head>
     <body>
-        <header class="main-header">
-            <h1 class="titulo"><strong>AIRTON MENDOZA</strong></h1>
+        <header>
+            <h1><strong>AIRTON MENDOZA</strong></h1>
         </header>
-        <nav class="main-nav">
-            <ul class="menu">
-                <li><a="https://www.facebook.com/airton.mendoza/">Facebook</a></li>
-                <li><a="https://www.instagram.com/airton_mendoza/">Instagram</a></li>
-                <li><a="https://twitter.com/airton_mendoza">Twitter</a></li>
-                <li><a="https://www.instagram.com/airton_mendoza/">Twith</a></li>
-            </ul>
+        <nav>
+            
         </nav>
     </body>
