--- a/index.html
+++ b/index.html
@@ -11,10 +11,10 @@
         </header>
         <nav class="main-nav">
             <ul class="menu">
-                <li><a="https://www.facebook.com/airton.mendoza/">Facebook</a></li>
-                <li><a="https://www.instagram.com/airton_mendoza/">Instagram</a></li>
-                <li><a="https://twitter.com/airton_mendoza">Twitter</a></li>
-                <li><a="https://www.instagram.com/airton_mendoza/">Twith</a></li>
+                <li><a href="https://www.facebook.com/airton.mendoza/">Facebook</a></li>
+                <li><a href="https://www.instagram.com/airton_mendoza/">Instagram</a></li>
+                <li><a href="https://twitter.com/airton_mendoza">Twitter</a></li>
+                <li><a href="https://www.instagram.com/airton_mendoza/">Twith</a></li>
             </ul>
         </nav>
     </body>
