--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
                 <li><a href="https://www.facebook.com/airton.mendoza/">Facebook</a></li>
                 <li><a href="https://www.instagram.com/airton_mendoza/">Instagram</a></li>
                 <li><a href="https://twitter.com/airton_mendoza">Twitter</a></li>
-                <li><a href="https://www.instagram.com/airton_mendoza/">Twith</a></li>
+                <li><a href="https://www.instagram.com/airton_mendoza/">Twitch</a></li>
             </ul>
         </nav>
     </body>
