--- a/index.html
+++ b/index.html
@@ -12,10 +12,10 @@
         </header>
         <nav class="main-nav">
             <ul class="menu">
-                <li><a href="https://www.facebook.com/airton.mendoza/">Facebook</a></li>
-                <li><a href="https://www.instagram.com/airton_mendoza/">Instagram</a></li>
-                <li><a href="https://twitter.com/airton_mendoza">Twitter</a></li>
-                <li><a href="https://www.instagram.com/airton_mendoza/">Twitch</a></li>
+                <li class="menu_link"><a href="https://www.facebook.com/airton.mendoza/">Facebook</a></li>
+                <li class="menu_link"><a href="https://www.instagram.com/airton_mendoza/">Instagram</a></li>
+                <li class="menu_link"><a href="https://twitter.com/airton_mendoza">Twitter</a></li>
+                <li class="menu_link"><a href="https://www.instagram.com/airton_mendoza/">Twitch</a></li>
             </ul>
         </nav>
     </body>
