--- a/index.html
+++ b/index.html
@@ -18,4 +18,6 @@
                 <li><a href="https://www.instagram.com/airton_mendoza/" class="menu_link">Twitch</a></li>
             </ul>
         </nav>
+        PANAS USIL
+        <a href="https://biancagonzalesrequejo.github.io/BiancaGonzalesRequejoDayanne/">Bianca Requejo</a>
     </body>
