--- a/index.html
+++ b/index.html
@@ -19,5 +19,5 @@
             </ul>
         </nav>
         PANAS USIL
-        <a href="https://biancagonzalesrequejo.github.io/BiancaGonzalesRequejoDayanne/">Bianca Requejo</a>
+        <a href="https://biancagonzalesrequejo.github.io/BiancaGonzalesRequejoDayanne/" target="_blank">Bianca Requejo</a>
     </body>
