--- a/index.html
+++ b/index.html
@@ -12,10 +12,10 @@
         </header>
         <nav class="main-nav">
             <ul class="menu">
-                <li><a href="https://www.facebook.com/airton.mendoza/" class="menu_link">Facebook</a></li>
-                <li><a href="https://www.instagram.com/airton_mendoza/" class="menu_link">Instagram</a></li>
-                <li><a href="https://twitter.com/airton_mendoza" class="menu_link">Twitter</a></li>
-                <li><a href="https://www.instagram.com/airton_mendoza/" class="menu_link">Twitch</a></li>
+                <li><a href="https://www.facebook.com/airton.mendoza/" target="_blank" class="menu_link">Facebook</a></li>
+                <li><a href="https://www.instagram.com/airton_mendoza/" target="_blank" class="menu_link">Instagram</a></li>
+                <li><a href="https://twitter.com/airton_mendoza" target="_blank" class="menu_link">Twitter</a></li>
+                <li><a href="https://www.instagram.com/airton_mendoza/" target="_blank" class="menu_link">Twitch</a></li>
             </ul>
         </nav>
         PANAS USIL
