--- a/index.html
+++ b/index.html
@@ -20,4 +20,5 @@
         </nav>
         PANAS USIL
         <a href="https://biancagonzalesrequejo.github.io/BiancaGonzalesRequejoDayanne/" target="_blank">Bianca Requejo</a>
+        <a href="https://gabrielalvarado.me/" target="_blank">Gabriel Alvarado</a>
     </body>
