--- a/index.html
+++ b/index.html
@@ -21,4 +21,16 @@
         PANAS USIL
         <a href="https://biancagonzalesrequejo.github.io/BiancaGonzalesRequejoDayanne/" target="_blank">Bianca Requejo</a>
         <a href="https://gabrielalvarado.me/" target="_blank">Gabriel Alvarado</a>
+        <a href="https://king-pacaya.github.io/" target="_blank">King Pacaya</a>
+        <a href="" target="_blank"></a>
+        <a href="" target="_blank"></a>
+        <a href="" target="_blank"></a>
+        <a href="" target="_blank"></a>
+        <a href="" target="_blank"></a>
+        <a href="" target="_blank"></a>
+        <a href="" target="_blank"></a>
+        <a href="" target="_blank"></a>
+        <a href="" target="_blank"></a>
+        <a href="" target="_blank"></a>
+        <a href="" target="_blank"></a>
     </body>
