--- a/index.html
+++ b/index.html
@@ -19,9 +19,9 @@
             </ul>
         </nav>
         PANAS USIL
-        <a href="https://biancagonzalesrequejo.github.io/BiancaGonzalesRequejoDayanne/" target="_blank">Bianca Requejo</a>
-        <a href="https://gabrielalvarado.me/" target="_blank">Gabriel Alvarado</a>
-        <a href="https://king-pacaya.github.io/" target="_blank">King Pacaya</a>
+        <a href="https://biancagonzalesrequejo.github.io/BiancaGonzalesRequejoDayanne/" target="_blank" class="panas">Bianca Requejo</a>
+        <a href="https://gabrielalvarado.me/" target="_blank" class="panas">Gabriel Alvarado</a>
+        <a href="https://king-pacaya.github.io/" target="_blank" class="panas">King Pacaya</a>
         <a href="" target="_blank"></a>
         <a href="" target="_blank"></a>
         <a href="" target="_blank"></a>
