--- a/index.html
+++ b/index.html
@@ -22,15 +22,16 @@
         <a href="https://biancagonzalesrequejo.github.io/BiancaGonzalesRequejoDayanne/" target="_blank" class="panas">Bianca Requejo</a>
         <a href="https://gabrielalvarado.me/" target="_blank" class="panas">Gabriel Alvarado</a>
         <a href="https://king-pacaya.github.io/" target="_blank" class="panas">King Pacaya</a>
-        <a href="" target="_blank"></a>
-        <a href="" target="_blank"></a>
-        <a href="" target="_blank"></a>
-        <a href="" target="_blank"></a>
-        <a href="" target="_blank"></a>
-        <a href="" target="_blank"></a>
-        <a href="" target="_blank"></a>
-        <a href="" target="_blank"></a>
-        <a href="" target="_blank"></a>
-        <a href="" target="_blank"></a>
-        <a href="" target="_blank"></a>
+        <a href="http://adrianpinado.me/" target="_blank" class="panas">Adrián Pinado</a>
+        <a href="" target="_blank" class="panas"></a>
+        <a href="" target="_blank" class="panas"></a>
+        <a href="" target="_blank" class="panas"></a>
+        <a href="" target="_blank" class="panas"></a>
+        <a href="" target="_blank" class="panas"></a>
+        <a href="" target="_blank" class="panas"></a>
+        <a href="" target="_blank" class="panas"></a>
+        <a href="" target="_blank" class="panas"></a>
+        <a href="" target="_blank" class="panas"></a>
+        <a href="" target="_blank" class="panas"></a>
+        <a href="" target="_blank" class="panas"></a>
     </body>
