--- a/index.html
+++ b/index.html
@@ -23,11 +23,11 @@
         <a href="https://gabrielalvarado.me/" target="_blank" class="panas">Gabriel Alvarado</a>
         <a href="https://king-pacaya.github.io/" target="_blank" class="panas">King Pacaya</a>
         <a href="http://adrianpinado.me/" target="_blank" class="panas">Adrián Pinado</a>
-        <a href="" target="_blank" class="panas"></a>
-        <a href="" target="_blank" class="panas"></a>
-        <a href="" target="_blank" class="panas"></a>
-        <a href="" target="_blank" class="panas"></a>
-        <a href="" target="_blank" class="panas"></a>
+        <a href="https://jobasi128.github.io/" target="_blank" class="panas">Jonathan Barzola</a>
+        <a href="http://www.danielquichepalacios.com/" target="_blank" class="panas">Daniel Quiche</a>
+        <a href="http://ricardocoria.byethost12.com/" target="_blank" class="panas">Ricardo Coria</a>
+        <a href="https://skeletus.github.io/" target="_blank" class="panas">Jesus Arias</a>
+        <a href="https://wolfzerov.github.io/WolfZero.github.io/" target="_blank" class="panas">Franco Villalobos</a>
         <a href="" target="_blank" class="panas"></a>
         <a href="" target="_blank" class="panas"></a>
         <a href="" target="_blank" class="panas"></a>
