--- a/index.html
+++ b/index.html
@@ -28,6 +28,16 @@
         <a href="http://ricardocoria.byethost12.com/" target="_blank" class="panas">Ricardo Coria</a>
         <a href="https://skeletus.github.io/" target="_blank" class="panas">Jesus Arias</a>
         <a href="https://wolfzerov.github.io/WolfZero.github.io/" target="_blank" class="panas">Franco Villalobos</a>
+        <a href="https://claudiafernandarejasruiz.me/" target="_blank" class="panas">Claudia Rejas</a>
+        <a href="https://www.jesusalonsosalazarmallqui.me/" target="_blank" class="panas">Jesus Salazar</a>
+        <a href="https://www.diegoalonsomiguelortegaaquino.me/" target="_blank" class="panas">Diego Ortega</a>
+        <a href="https://www.brayanelmercampossanchez.me/" target="_blank" class="panas">Bryan Campos</a>
+        <a href="https://www.enmamilagroscondormedina.me/" target="_blank" class="panas">Enma Condor</a>
+        <a href="http://patriciogabrielramosmantari.me/" target="_blank" class="panas">Patricio Ramos</a>
+        <a href="" target="_blank" class="panas"></a>
+        <a href="" target="_blank" class="panas"></a>
+        <a href="" target="_blank" class="panas"></a>
+        <a href="" target="_blank" class="panas"></a>
         <a href="" target="_blank" class="panas"></a>
         <a href="" target="_blank" class="panas"></a>
         <a href="" target="_blank" class="panas"></a>
