--- a/index.html
+++ b/index.html
@@ -34,6 +34,16 @@
         <a href="https://www.brayanelmercampossanchez.me/" target="_blank" class="panas">Bryan Campos</a>
         <a href="https://www.enmamilagroscondormedina.me/" target="_blank" class="panas">Enma Condor</a>
         <a href="http://patriciogabrielramosmantari.me/" target="_blank" class="panas">Patricio Ramos</a>
+        <a href="https://angiemichellemontoyarocca.github.io/" target="_blank" class="panas">Angie Montoya</a>
+        <a href="https://electroscopic-place.000webhostapp.com/" target="_blank" class="panas">Eduardo Bautista</a>
+        <a href="https://mateobernabehuarcayamelgarejo.me/" target="_blank" class="panas">Mateo Huarcaya</a>
+        <a href="https://andreaabigailcuevasvasquez00.000webhostapp.com/index.html" target="_blank" class="panas">Andrea Cuevas</a>
+        <a href="https://juandediosalvarez.me/" target="_blank" class="panas">Juan Alvarez</a>
+        <a href="https://practical-franklin-d0e378.netlify.app/" target="_blank" class="panas">Laleska Arroyo</a>
+        <a href="https://kevinrobertyanezagurto.me/" target="_blank" class="panas">Kevin Yañez</a>
+        <a href="https://www.fabianimanolojedavalero.me/" target="_blank" class="panas">Fabian Manolo</a>
+        <a href="http://sebastianmoralescardoso.me/" target="_blank" class="panas">Sebastian Morales</a>
+        <a href="" target="_blank" class="panas"></a>
         <a href="" target="_blank" class="panas"></a>
         <a href="" target="_blank" class="panas"></a>
         <a href="" target="_blank" class="panas"></a>
