--- a/index.html
+++ b/index.html
@@ -43,12 +43,12 @@
         <a href="https://kevinrobertyanezagurto.me/" target="_blank" class="panas">Kevin Yañez</a>
         <a href="https://www.fabianimanolojedavalero.me/" target="_blank" class="panas">Fabian Manolo</a>
         <a href="http://sebastianmoralescardoso.me/" target="_blank" class="panas">Sebastian Morales</a>
-        <a href="" target="_blank" class="panas"></a>
-        <a href="" target="_blank" class="panas"></a>
-        <a href="" target="_blank" class="panas"></a>
-        <a href="" target="_blank" class="panas"></a>
-        <a href="" target="_blank" class="panas"></a>
-        <a href="" target="_blank" class="panas"></a>
+        <a href="https://rocac.github.io/" target="_blank" class="panas">Roberto Nuñez</a>
+        <a href="https://danielatorres14.github.io/" target="_blank" class="panas">Daniela Torres</a>
+        <a href="https://joseoviedoar.github.io/github.io/" target="_blank" class="panas">Jose Oviedo</a>
+        <a href="https://arnoldpajueloaraujo.me/" target="_blank" class="panas">Arnold Pajuelo</a>
+        <a href="https://anderson22campos.github.io/Blog-Personal/" target="_blank" class="panas">Anderson Campos</a>
+        <a href="https://alexanderdp345.github.io/KEVIN-ALEXANDER-DURAND-PIZARRO/" target="_blank" class="panas">Kevin Durand</a>
         <a href="" target="_blank" class="panas"></a>
         <a href="" target="_blank" class="panas"></a>
         <a href="" target="_blank" class="panas"></a>
