--- a/index.html
+++ b/index.html
@@ -18,40 +18,39 @@
                 <li><a href="https://www.twitch.tv/airton_mendoza" target="_blank" class="menu_link">Twitch</a></li>
             </ul>
         </nav>
-        PANAS USIL
-        <a href="https://biancagonzalesrequejo.github.io/BiancaGonzalesRequejoDayanne/" target="_blank" class="panas">Bianca Requejo</a>
-        <a href="https://gabrielalvarado.me/" target="_blank" class="panas">Gabriel Alvarado</a>
-        <a href="https://king-pacaya.github.io/" target="_blank" class="panas">King Pacaya</a>
-        <a href="http://adrianpinado.me/" target="_blank" class="panas">Adrián Pinado</a>
-        <a href="https://jobasi128.github.io/" target="_blank" class="panas">Jonathan Barzola</a>
-        <a href="http://www.danielquichepalacios.com/" target="_blank" class="panas">Daniel Quiche</a>
-        <a href="http://ricardocoria.byethost12.com/" target="_blank" class="panas">Ricardo Coria</a>
-        <a href="https://skeletus.github.io/" target="_blank" class="panas">Jesus Arias</a>
-        <a href="https://wolfzerov.github.io/WolfZero.github.io/" target="_blank" class="panas">Franco Villalobos</a>
-        <a href="https://claudiafernandarejasruiz.me/" target="_blank" class="panas">Claudia Rejas</a>
-        <a href="https://www.jesusalonsosalazarmallqui.me/" target="_blank" class="panas">Jesus Salazar</a>
-        <a href="https://www.diegoalonsomiguelortegaaquino.me/" target="_blank" class="panas">Diego Ortega</a>
-        <a href="https://www.brayanelmercampossanchez.me/" target="_blank" class="panas">Bryan Campos</a>
-        <a href="https://www.enmamilagroscondormedina.me/" target="_blank" class="panas">Enma Condor</a>
-        <a href="http://patriciogabrielramosmantari.me/" target="_blank" class="panas">Patricio Ramos</a>
-        <a href="https://angiemichellemontoyarocca.github.io/" target="_blank" class="panas">Angie Montoya</a>
-        <a href="https://electroscopic-place.000webhostapp.com/" target="_blank" class="panas">Eduardo Bautista</a>
-        <a href="https://mateobernabehuarcayamelgarejo.me/" target="_blank" class="panas">Mateo Huarcaya</a>
-        <a href="https://andreaabigailcuevasvasquez00.000webhostapp.com/index.html" target="_blank" class="panas">Andrea Cuevas</a>
-        <a href="https://juandediosalvarez.me/" target="_blank" class="panas">Juan Alvarez</a>
-        <a href="https://practical-franklin-d0e378.netlify.app/" target="_blank" class="panas">Laleska Arroyo</a>
-        <a href="https://kevinrobertyanezagurto.me/" target="_blank" class="panas">Kevin Yañez</a>
-        <a href="https://www.fabianimanolojedavalero.me/" target="_blank" class="panas">Fabian Manolo</a>
-        <a href="http://sebastianmoralescardoso.me/" target="_blank" class="panas">Sebastian Morales</a>
-        <a href="https://rocac.github.io/" target="_blank" class="panas">Roberto Nuñez</a>
-        <a href="https://danielatorres14.github.io/" target="_blank" class="panas">Daniela Torres</a>
-        <a href="https://joseoviedoar.github.io/github.io/" target="_blank" class="panas">Jose Oviedo</a>
-        <a href="https://arnoldpajueloaraujo.me/" target="_blank" class="panas">Arnold Pajuelo</a>
-        <a href="https://anderson22campos.github.io/Blog-Personal/" target="_blank" class="panas">Anderson Campos</a>
-        <a href="https://alexanderdp345.github.io/KEVIN-ALEXANDER-DURAND-PIZARRO/" target="_blank" class="panas">Kevin Durand</a>
-        <a href="" target="_blank" class="panas"></a>
-        <a href="" target="_blank" class="panas"></a>
-        <a href="" target="_blank" class="panas"></a>
-        <a href="" target="_blank" class="panas"></a>
-        <a href="" target="_blank" class="panas"></a>
+        <ol>PANAS USIL
+            <li><a href="https://biancagonzalesrequejo.github.io/BiancaGonzalesRequejoDayanne/" target="_blank" class="panas">Bianca Requejo</a></li>
+            <li><a href="https://gabrielalvarado.me/" target="_blank" class="panas">Gabriel Alvarado</a></li>
+            <li><a href="https://king-pacaya.github.io/" target="_blank" class="panas">King Pacaya</a></li>
+            <li><a href="http://adrianpinado.me/" target="_blank" class="panas">Adrián Pinado</a></li>
+            <li><a href="https://jobasi128.github.io/" target="_blank" class="panas">Jonathan Barzola</a></li>
+            <li><a href="http://www.danielquichepalacios.com/" target="_blank" class="panas">Daniel Quiche</a></li>
+            <li><a href="http://ricardocoria.byethost12.com/" target="_blank" class="panas">Ricardo Coria</a></li>
+            <li><a href="https://skeletus.github.io/" target="_blank" class="panas">Jesus Arias</a></li>
+            <li><a href="https://wolfzerov.github.io/WolfZero.github.io/" target="_blank" class="panas">Franco Villalobos</a></li>
+            <li><a href="https://claudiafernandarejasruiz.me/" target="_blank" class="panas">Claudia Rejas</a></li>
+            <li><a href="https://www.jesusalonsosalazarmallqui.me/" target="_blank" class="panas">Jesus Salazar</a></li>
+            <li><a href="https://www.diegoalonsomiguelortegaaquino.me/" target="_blank" class="panas">Diego Ortega</a></li>
+            <li><a href="https://www.brayanelmercampossanchez.me/" target="_blank" class="panas">Bryan Campos</a></li>
+            <li><a href="https://www.enmamilagroscondormedina.me/" target="_blank" class="panas">Enma Condor</a></li>
+            <li><a href="http://patriciogabrielramosmantari.me/" target="_blank" class="panas">Patricio Ramos</a></li>
+            <li><a href="https://angiemichellemontoyarocca.github.io/" target="_blank" class="panas">Angie Montoya</a></li>
+            <li><a href="https://electroscopic-place.000webhostapp.com/" target="_blank" class="panas">Eduardo Bautista</a></li>
+            <li><a href="https://mateobernabehuarcayamelgarejo.me/" target="_blank" class="panas">Mateo Huarcaya</a></li>
+            <li><a href="https://andreaabigailcuevasvasquez00.000webhostapp.com/index.html" target="_blank" class="panas">Andrea Cuevas</a></li>
+            <li><a href="https://juandediosalvarez.me/" target="_blank" class="panas">Juan Alvarez</a></li>
+            <li><a href="https://practical-franklin-d0e378.netlify.app/" target="_blank" class="panas">Laleska Arroyo</a></li>
+            <li><a href="https://kevinrobertyanezagurto.me/" target="_blank" class="panas">Kevin Yañez</a></li>
+            <li><a href="https://www.fabianimanolojedavalero.me/" target="_blank" class="panas">Fabian Manolo</a></li>
+            <li><a href="http://sebastianmoralescardoso.me/" target="_blank" class="panas">Sebastian Morales</a></li>
+            <li><a href="https://rocac.github.io/" target="_blank" class="panas">Roberto Nuñez</a></li>
+            <li><a href="https://danielatorres14.github.io/" target="_blank" class="panas">Daniela Torres</a></li>
+            <li><a href="https://joseoviedoar.github.io/github.io/" target="_blank" class="panas">Jose Oviedo</a></li>
+            <li><a href="https://arnoldpajueloaraujo.me/" target="_blank" class="panas">Arnold Pajuelo</a></li>
+            <li><a href="https://anderson22campos.github.io/Blog-Personal/" target="_blank" class="panas">Anderson Campos</a></li>
+            <li><a href="https://alexanderdp345.github.io/KEVIN-ALEXANDER-DURAND-PIZARRO/" target="_blank" class="panas">Kevin Durand</a></li>
+            <li><a href="https://fundacionbj.000webhostapp.com/" target="_blank" class="panas">Adrian Loza</a></li>
+            <li><a href="https://mosaic-circuitries.000webhostapp.com/" target="_blank" class="panas">Cinthia Ochoa</a></li>
+            <li><a href="" target="_blank" class="panas">Angello Llerena :3</a></li>
+        </ol>
     </body>
