--- a/index.html
+++ b/index.html
@@ -51,6 +51,7 @@
             <li><a href="https://alexanderdp345.github.io/KEVIN-ALEXANDER-DURAND-PIZARRO/" target="_blank" class="panas">Kevin Durand</a></li>
             <li><a href="https://fundacionbj.000webhostapp.com/" target="_blank" class="panas">Adrian Loza</a></li>
             <li><a href="https://mosaic-circuitries.000webhostapp.com/" target="_blank" class="panas">Cinthia Ochoa</a></li>
+            <li><a href="https://juniorabrahamperezhuamani.000webhostapp.com" target="_blank" class="panas">Junior Perez</a></li>
             <li><a href="" target="_blank" class="panas">Angello Llerena :3</a></li>
         </ol>
     </body>
