--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
                 <li><a href="https://www.twitch.tv/airton_mendoza" target="_blank" class="menu_link">Twitch</a></li>
             </ul>
         </nav>
-        <ol>PANAS USIL
+        <ol>PANAS USIL 
             <li><a href="https://biancagonzalesrequejo.github.io/BiancaGonzalesRequejoDayanne/" target="_blank" class="panas">Bianca Requejo</a></li>
             <li><a href="https://gabrielalvarado.me/" target="_blank" class="panas">Gabriel Alvarado</a></li>
             <li><a href="https://king-pacaya.github.io/" target="_blank" class="panas">King Pacaya</a></li>
@@ -52,6 +52,8 @@
             <li><a href="https://fundacionbj.000webhostapp.com/" target="_blank" class="panas">Adrian Loza</a></li>
             <li><a href="https://mosaic-circuitries.000webhostapp.com/" target="_blank" class="panas">Cinthia Ochoa</a></li>
             <li><a href="https://juniorabrahamperezhuamani.000webhostapp.com" target="_blank" class="panas">Junior Perez</a></li>
+            <li><a href="https://parislorenzo.github.io/" target="_blank" class="panas">Paris Lorenzo</a></li>
+            <li><a href="https://skeletus.github.io/" target="_blank" class="panas">Jesus Arias</a>
             <li><a href="" target="_blank" class="panas">Angello Llerena :3</a></li>
         </ol>
     </body>
