--- a/index.html
+++ b/index.html
@@ -54,6 +54,7 @@
             <li><a href="https://juniorabrahamperezhuamani.000webhostapp.com" target="_blank" class="panas">Junior Perez</a></li>
             <li><a href="https://parislorenzo.github.io/" target="_blank" class="panas">Paris Lorenzo</a></li>
             <li><a href="https://skeletus.github.io/" target="_blank" class="panas">Jesus Arias</a>
+            <li><a href="http://italoacostabonija.me/italoacosta.github.io/" target="_blank" class="panas">Italo Acosta</a></li>
             <li><a href="" target="_blank" class="panas">Angello Llerena :3</a></li>
         </ol>
     </body>
