--- a/index.html
+++ b/index.html
@@ -55,6 +55,6 @@
             <li><a href="https://parislorenzo.github.io/" target="_blank" class="panas">Paris Lorenzo</a></li>
             <li><a href="https://skeletus.github.io/" target="_blank" class="panas">Jesus Arias</a>
             <li><a href="http://italoacostabonija.me/italoacosta.github.io/" target="_blank" class="panas">Italo Acosta</a></li>
-            <li><a href="" target="_blank" class="panas">Angello Llerena :3</a></li>
+            <li><a href="https://angello5.github.io/Angello-Marcelo-Llerena-Gomez/" target="_blank" class="panas">Angello Llerena :3</a></li>
         </ol>
     </body>
