--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
                 <li><a href="https://www.twitch.tv/airton_mendoza" target="_blank" class="menu_link">Twitch</a></li>
             </ul>
         </nav>
-        <p>Amigos lo siento, aun no esta terminada mi pagina, pero gracias por venir hasta aqui y si pueden difundan que va a quedar muy buena <3</p>
+        <p><h2><i>Amigos lo siento, aun no esta terminada mi pagina, pero gracias por venir hasta aqui y si pueden difundan que va a quedar muy buena :3 </p></h2></i>
         <ol>PANAS USIL 
             <li><a href="https://biancagonzalesrequejo.github.io/BiancaGonzalesRequejoDayanne/" target="_blank" class="panas">Bianca Requejo</a></li>
             <li><a href="https://gabrielalvarado.me/" target="_blank" class="panas">Gabriel Alvarado</a></li>
