--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
                 <li><a href="https://www.twitch.tv/airton_mendoza" target="_blank" class="menu_link">Twitch</a></li>
             </ul>
         </nav>
-        <p><h2><i>Amigos lo siento, aun no esta terminada mi pagina, pero gracias por venir hasta aqui y si pueden difundan que va a quedar muy buena :3 </p></h2></i>
+        <p>Me presento, mi nombre es <strong>Airton Mendoza</strong> </p>
         <ol>PANAS USIL 
             <li><a href="https://biancagonzalesrequejo.github.io/BiancaGonzalesRequejoDayanne/" target="_blank" class="panas">Bianca Requejo</a></li>
             <li><a href="https://gabrielalvarado.me/" target="_blank" class="panas">Gabriel Alvarado</a></li>
@@ -57,5 +57,8 @@
             <li><a href="https://skeletus.github.io/" target="_blank" class="panas">Jesus Arias</a>
             <li><a href="http://italoacostabonija.me/italoacosta.github.io/" target="_blank" class="panas">Italo Acosta</a></li>
             <li><a href="https://angello5.github.io/Angello-Marcelo-Llerena-Gomez/" target="_blank" class="panas">Angello Llerena :3</a></li>
+            <li><a href="https://record-dishes.000webhostapp.com/" target="_blank" class="panas">Rogger Yañez</a></li>
+            <li><a href="https://fundacionbj.000webhostapp.com/" target="_blank" class="panas">Adrian Loza</a></li>
+            <li><a href="http://eviediaz.me/" target="_blank" class="panas">Evie Diaz</a></li>                         
         </ol>
     </body>
