--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
             </ul>
         </nav>
         <p>Me presento, mi nombre es <strong>Airton Mendoza</strong> </p>
-        <ol>PANAS USIL 
+        <ol><span class="USIL">PANAS USIL</span> 
             <li><a href="https://biancagonzalesrequejo.github.io/BiancaGonzalesRequejoDayanne/" target="_blank" class="panas">Bianca Requejo</a></li>
             <li><a href="https://gabrielalvarado.me/" target="_blank" class="panas">Gabriel Alvarado</a></li>
             <li><a href="https://king-pacaya.github.io/" target="_blank" class="panas">King Pacaya</a></li>
