--- a/index.html
+++ b/index.html
@@ -18,8 +18,9 @@
                 <li><a href="https://www.twitch.tv/airton_mendoza" target="_blank" class="menu_link">Twitch</a></li>
             </ul>
         </nav>
-        <p>Me presento, mi nombre es <strong>Airton Mendoza</strong> tengo 16 años, nací el 7 de julio del 2004, mis papas son Jesus Mendoza y Pilar Velasquez, tengo 1 hermano, Alex Mendoza, y 2 hermanas, Camila Mendoza y Stephany Mendoza, soy el tercer hijo de la familia Mendoza Velasquez, actualmente estoy estudiando <a href="https://es.wikipedia.org/wiki/Ingenier%C3%ADa_de_software" target="_blank">Ingenieria de software</a> en la <a href="https://www.usil.edu.pe/?verified=true" target="_blank">Universidad San Ignacio de Loyola (USIL)</a> pero mi carrera y mi malla será remodelada a <a href="https://en.wikipedia.org/wiki/Computer_science" target="_blank">Compuer Science</a>.</p>
-        <ol><span class="USIL">PANAS USIL</span> 
+        <p>Me presento, mi nombre es <strong>Airton Mendoza</strong> tengo 16 años, nací el 7 de julio del 2004, mis papas son Jesus Mendoza y Pilar Velasquez, tengo 1 hermano, Alex Mendoza, y 2 hermanas, Camila Mendoza y Stephany Mendoza, soy el tercer hijo de la familia Mendoza Velasquez, actualmente estoy estudiando <a href="https://es.wikipedia.org/wiki/Ingenier%C3%ADa_de_softwar" target="_blank" class="links">Ingenieria de software</a> en la <a href="https://www.usil.edu.pe/?verified=true" target="_blank" class="links">Universidad San Ignacio de Loyola (USIL)</a> pero mi carrera y mi malla será remodelada a <a href="https://en.wikipedia.org/wiki/Computer_science" target="_blank" class="links">Compuer Science</a>.</p>
+        <img src="https://i.ibb.co/bWzJ6Ww/Airton.jpg" alt="Airton" border="0" class="yo"></a></a>
+        <ul><span class="USIL">PANAS USIL</span> 
             <li><a href="https://biancagonzalesrequejo.github.io/BiancaGonzalesRequejoDayanne/" target="_blank" class="panas">Bianca Requejo</a></li>
             <li><a href="https://gabrielalvarado.me/" target="_blank" class="panas">Gabriel Alvarado</a></li>
             <li><a href="https://king-pacaya.github.io/" target="_blank" class="panas">King Pacaya</a></li>
@@ -61,5 +62,5 @@
             <li><a href="https://fundacionbj.000webhostapp.com/" target="_blank" class="panas">Adrian Loza</a></li>
             <li><a href="http://eviediaz.me/" target="_blank" class="panas">Evie Diaz</a></li>                         
             <li><a href="https://clafer03.github.io/claudiobances1/" target="_blank" class="panas">Claudio Bances</a></li>
-        </ol>
+        </ul>
     </body>
