--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
             <li><a href="https://www.jesusalonsosalazarmallqui.me/" target="_blank" class="panas">Jesus Salazar</a></li>
             <li><a href="https://www.diegoalonsomiguelortegaaquino.me/" target="_blank" class="panas">Diego Ortega</a></li>
             <li><a href="https://www.brayanelmercampossanchez.me/" target="_blank" class="panas">Bryan Campos</a></li>
-            <li><a href="https://www.enmamilagroscondormedina.me/" target="_blank" class="panas">Enma Condor</a></li>
+            <li><a href="https://www.enmamilagroscondormedina.me/" target="_blank" class="panas">Enma Milagros Condor Medina</a></li>
             <li><a href="http://patriciogabrielramosmantari.me/" target="_blank" class="panas">Patricio Ramos</a></li>
             <li><a href="https://angiemichellemontoyarocca.github.io/" target="_blank" class="panas">Angie Montoya</a></li>
             <li><a href="https://electroscopic-place.000webhostapp.com/" target="_blank" class="panas">Eduardo Bautista</a></li>
