--- a/index.html
+++ b/index.html
@@ -68,5 +68,9 @@
             <li><a href="https://fundacionbj.000webhostapp.com/" target="_blank" class="panas">Adrian Loza</a></li>
             <li><a href="http://eviediaz.me/" target="_blank" class="panas">Evie Diaz</a></li>                         
             <li><a href="https://clafer03.github.io/claudiobances1/" target="_blank" class="panas">Claudio Bances</a></li>
+            <li><a href="https://loxxrm.github.io/Joaquin-Alonso-Rojas-Morales/" target="_blank" class="panas">Joaquen Rojas</a></li>
+            <li><a href="https://leonardomanuelcalderongabriel.000webhostapp.com/" target="_blank" class="panas">Leonardo Manuel Calderon Gabriel</a></li> 
+            <li><a href="https://852456luis852456.github.io/luis-angel-/" target="_blank" class="panas">Luis Angel Patiño Palomino</a></li>
+            <li><a href="https://lmiaul.github.io/Mauricio-Fabian-Sandoval-Arrieta/" target="_blank" class="panas">Mauricio Sandoval</a></li>
         </ol>
     </body>
