--- a/index.html
+++ b/index.html
@@ -18,13 +18,24 @@
                 <li><a href="https://www.twitch.tv/airton_mendoza" target="_blank" class="menu_link">Twitch</a></li>
             </ul>
         </nav>
-        <ul>¿Quien es Airton Mendoza?
-                <li>Me presento, mi nombre es <strong>Airton Mendoza</strong> tengo 16 años, nací el 7 de julio del 2004, mis papas son Jesus Mendoza y Pilar Velasquez, tengo 1 hermano, Alex Mendoza, y 2 hermanas, Camila Mendoza y Stephany Mendoza, soy el tercer hijo de la familia Mendoza Velasquez, actualmente estoy estudiando <a href="https://es.wikipedia.org/wiki/Ingenier%C3%ADa_de_softwar" target="_blank" class="links">Ingenieria de software</a> en la <a href="https://www.usil.edu.pe/?verified=true" target="_blank" class="links">Universidad San Ignacio de Loyola (USIL)</a> pero mi carrera y mi malla será remodelada a <a href="https://en.wikipedia.org/wiki/Computer_science" target="_blank" class="links">Compuer Science</a>.</li>
+        <ul><span class="info">¿Quien es Airton Mendoza?</span>
+                <li>Me presento, mi nombre es <strong>Airton Mendoza</strong> tengo 16 años, nací el 7 de julio del 2004, mis papas son Jesus Mendoza y Pilar Velasquez, tengo 1 hermano, Alex Mendoza, y 2 hermanas, Camila Mendoza y Stephany Mendoza, soy el tercer hijo de la familia Mendoza Velasquez, actualmente estoy estudiando <a href="https://es.wikipedia.org/wiki/Ingenier%C3%ADa_de_softwar" target="_blank" class="links">Ingenieria de software</a> en la <a href="https://www.usil.edu.pe/?verified=true" target="_blank" class="links"><strong>San Ignacio de Loyola (USIL)</strong></a> pero mi carrera y mi malla será remodelada a <a href="https://en.wikipedia.org/wiki/Computer_science" target="_blank" class="links">Compuer Science</a>.</li>
                 <img src="https://i.ibb.co/bWzJ6Ww/Airton.jpg" alt="Airton" border="0" class="yo">
                 
             </ul>
-        <ul>¿De donde viene y a donde va?
-            <li>Yo nací en <a href="https://www.peru.travel/es/destinos/ica" target="_blank" class="links">ica</a> y he vivido ahí hasta mis 16 años, recien ahora en 2021 vine a vivir a <a href="https://www.peru.travel/es/destinos/lima" target="_blank" class="links">Lima</a> para poder asistir a la <a href="https://www.usil.edu.pe/?verified=true" target="_blank" class="links">USIL</a></li>
+        <ul><span class="info">¿De donde viene y a donde va?</span>
+            <li>Yo nací en <a href="https://www.peru.travel/es/destinos/ica" target="_blank" class="links">ica</a> y he vivido ahí hasta mis 16 años, recien ahora en 2021 vine a vivir a <a href="https://www.peru.travel/es/destinos/lima" target="_blank" class="links">Lima</a> para poder estudiar en <a href="https://www.usil.edu.pe/?verified=true" target="_blank" class="links">USIL</a></li>
+        </ul>
+        <ul><span class="info">¿Cuales son sus aficiones?</span>
+            <li>Mi mayor aficion es jugar futbol, antes de la pandemia yo jugaba para el <a href="https://www.facebook.com/ucvclubdefutbol/" target="_blank" class="links">Cesar Vallejo</a></li> 
+            <li>Otra aficion mia es jugar videojuegos.  <ol><i style="color: palegreen;">Mis videojuegos favoritos son:</i></li>
+                                                            <li><a href="https://www.epicgames.com/fortnite/es-ES/home" target="_blank" class="juegos">Fortnite</a></li>
+                                                            <li><a href="https://www.epicgames.com/fortnite/es-ES/home" target="_blank" class="juegos">Rocket League</a></li>
+                                                            <li><a href="https://www.callofduty.com/es/" target="_blank" class="juegos">Call Of Duty</a></li>
+                                                            <li><a href="https://www.ea.com/es-es/games/fifa" target="_blank" class="juegos">FIFA</a></li>
+                                                            <li><a href="https://store.steampowered.com/app/550/Left_4_Dead_2/" target="_blank" class="juegos">Left 4 dead 2</a></li>
+                                                            <li><a href="https://www.minecraft.net/es-es" target="_blank" class="juegos">Minecraft</a></li>
+                                                        </ol>
         </ul>
         <ol><span class="USIL">PANAS USIL</span> 
             <li><a href="https://biancagonzalesrequejo.github.io/BiancaGonzalesRequejoDayanne/" target="_blank" class="panas">Bianca Requejo</a></li>
