--- a/index.html
+++ b/index.html
@@ -79,8 +79,12 @@
             <li><a href="http://eviediaz.me/" target="_blank" class="panas">Evie Diaz</a></li>                         
             <li><a href="https://clafer03.github.io/claudiobances1/" target="_blank" class="panas">Claudio Bances</a></li>
             <li><a href="https://loxxrm.github.io/Joaquin-Alonso-Rojas-Morales/" target="_blank" class="panas">Joaquen Rojas</a></li>
-            <li><a href="https://leonardomanuelcalderongabriel.000webhostapp.com/" target="_blank" class="panas">Leonardo Manuel Calderon Gabriel</a></li> 
-            <li><a href="https://852456luis852456.github.io/luis-angel-/" target="_blank" class="panas">Luis Angel Patiño Palomino</a></li>
+            <li><a href="https://leonardomanuelcalderongabriel.000webhostapp.com/" target="_blank" class="panas">Leonardo Calderon</a></li> 
+            <li><a href="https://852456luis852456.github.io/luis-angel-/" target="_blank" class="panas">Luis Patiño </a></li>
             <li><a href="https://lmiaul.github.io/Mauricio-Fabian-Sandoval-Arrieta/" target="_blank" class="panas">Mauricio Sandoval</a></li>
+            <li><a href="https://ariana1702.github.io/Ariana.Vargas.Chirinos/" target="_blank" class="panas">Ariana Vargas</a></li>
+            <li><a href="https://electroscopic-place.000webhostapp.com/" target="_blank" class="panas">Eduardo Bautista</a></li>
+            <li><a href="https://thamvd.github.io/ThamaraValenzuelaDelaCruz/" target="_blank" class="panas">Thamara Valenzuela</a></li>
+            <li><a href="https://aldhair123.000webhostapp.com/" target="_blank" class="panas">Aldhair Ordoñez</a></li>
         </ol>
     </body>
