--- a/index.html
+++ b/index.html
@@ -29,11 +29,17 @@
             <li>Mi mayor aficion es jugar futbol, antes de la pandemia yo jugaba para el <a href="https://www.facebook.com/ucvclubdefutbol/" target="_blank" class="links">Cesar Vallejo</a></li> 
             <li>Otra aficion mia es jugar videojuegos.  <ol><i style="color: palegreen;">Mis videojuegos favoritos son:</i></li>
                                                             <li><a href="https://www.epicgames.com/fortnite/es-ES/home" target="_blank" class="juegos">Fortnite</a></li>
+                                                            <img src="https://cdn2.unrealengine.com/br16-socialshare-lineup1-1920x1080-cc758b8820b8.jpg" class="img_juegos">
                                                             <li><a href="https://www.epicgames.com/fortnite/es-ES/home" target="_blank" class="juegos">Rocket League</a></li>
+                                                            <img src="https://cdn1.epicgames.com/9773aa1aa54f4f7b80e44bef04986cea/offer/EGS_RocketLeague_PsyonixLLC_S1-2560x1440-e9dc9ecfd5a872841615d15ba04600a6.jpg?h=270&resize=1&w=480" class="img_juegos">
                                                             <li><a href="https://www.callofduty.com/es/" target="_blank" class="juegos">Call Of Duty</a></li>
+                                                            <img src="https://cdn.cloudflare.steamstatic.com/steam/apps/202970/capsule_616x353.jpg?t=1621280569" class="img_juegos">
                                                             <li><a href="https://www.ea.com/es-es/games/fifa" target="_blank" class="juegos">FIFA</a></li>
+                                                            <img src="https://atalayar.com/sites/default/files/styles/foto_/public/noticias/Atalayar_FIFA%2021.jpg?itok=V4t36zZI" class="img_juegos">
                                                             <li><a href="https://store.steampowered.com/app/550/Left_4_Dead_2/" target="_blank" class="juegos">Left 4 dead 2</a></li>
+                                                            <img src="https://elcomercio.pe/resizer/fQzmi5xipslm-EaJADorylg0s50=/980x528/smart/filters:format(jpeg):quality(75)/cloudfront-us-east-1.images.arcpublishing.com/elcomercio/XSGPIAL4CFADBMIL4LMTTVGDZI.jpg" class="img_juegos">
                                                             <li><a href="https://www.minecraft.net/es-es" target="_blank" class="juegos">Minecraft</a></li>
+                                                            <img src="http://cdn02.nintendo-europe.com/media/images/10_share_images/games_15/nintendo_switch_4/H2x1_NSwitch_Minecraft_image1280w.jpg" class="img_juegos">
                                                         </ol>
         </ul>
         <ol><span class="USIL">PANAS USIL</span> 
