--- a/index.html
+++ b/index.html
@@ -16,6 +16,7 @@
                 <li><a href="https://www.instagram.com/airton_mendoza/" target="_blank" class="menu_link">Instagram</a></li>
                 <li><a href="https://twitter.com/airton_mendoza" target="_blank" class="menu_link">Twitter</a></li>
                 <li><a href="https://www.twitch.tv/airton_mendoza" target="_blank" class="menu_link">Twitch</a></li>
+                <li><a href="https://api.whatsapp.com/send?phone=51920894644" target="_blank" class="menu_link">Whatsapp</a></li>
             </ul>
         </nav>
         <ul><span class="info">¿Quien es Airton Mendoza?</span>
