--- a/index.html
+++ b/index.html
@@ -93,5 +93,6 @@
             <li><a href="https://electroscopic-place.000webhostapp.com/" target="_blank" class="panas">Eduardo Bautista</a></li>
             <li><a href="https://thamvd.github.io/ThamaraValenzuelaDelaCruz/" target="_blank" class="panas">Thamara Valenzuela</a></li>
             <li><a href="https://aldhair123.000webhostapp.com/" target="_blank" class="panas">Aldhair Ordoñez</a></li>
+            <li><a href="https://ylemnadia.github.io/" target="_blank" class="panas">Ylem Dioses</a></li>
         </ol>
     </body>
