--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
                 <li>Otra aficion mia es jugar videojuegos.  <ol><i style="color: palegreen;">Mis videojuegos favoritos son:</i></li>
                                                                 <li><a href="https://www.epicgames.com/fortnite/es-ES/home" target="_blank" class="juegos">Fortnite</a></li>
                                                                 <img src="https://cdn2.unrealengine.com/br16-socialshare-lineup1-1920x1080-cc758b8820b8.jpg" class="img_juegos">
-                                                                <li><a href="https://www.epicgames.com/fortnite/es-ES/home" target="_blank" class="juegos">Rocket League</a></li>
+                                                                <li><a href="https://www.rocketleague.com/" target="_blank" class="juegos">Rocket League</a></li>
                                                                 <img src="https://cdn1.epicgames.com/9773aa1aa54f4f7b80e44bef04986cea/offer/EGS_RocketLeague_PsyonixLLC_S1-2560x1440-e9dc9ecfd5a872841615d15ba04600a6.jpg?h=270&resize=1&w=480" class="img_juegos">
                                                                 <li><a href="https://www.callofduty.com/es/" target="_blank" class="juegos">Call Of Duty</a></li>
                                                                 <img src="https://cdn.cloudflare.steamstatic.com/steam/apps/202970/capsule_616x353.jpg?t=1621280569" class="img_juegos">
