--- a/index.html
+++ b/index.html
@@ -360,6 +360,12 @@
                 <td><a href="https://github.com/" target="_blank" class="dominios">github</a></td>
                 <td><a href="https://sebastianhuarancalezcano.github.io/" target="_blank" class="panas">Visitalo!</a></td>
             </tr>
+            <tr>
+                <td class="compañero">Paolo Pomacaja</td>
+                <td class="carrera">Computer Science</td>
+                <td><a href="https://github.com/" target="_blank" class="dominios">github</a></td>
+                <td><a href="https://paolopomacaja01.github.io/Paolo.Esteban.Pomacaja.Neyra/" target="_blank" class="panas">Visitalo!</a></td>
+            </tr>
         </table>
         </div> 
         </footer>
