--- a/index.html
+++ b/index.html
@@ -366,6 +366,12 @@
                 <td><a href="https://github.com/" target="_blank" class="dominios">github</a></td>
                 <td><a href="https://paolopomacaja01.github.io/Paolo.Esteban.Pomacaja.Neyra/" target="_blank" class="panas">Visitalo!</a></td>
             </tr>
+            <tr>
+                <td class="compañero">Luis Peña</td>
+                <td class="carrera">Sistemas de Información</td>
+                <td><a href="https://github.com/" target="_blank" class="dominios">github</a></td>
+                <td><a href="https://luisp17-cs.github.io/" target="_blank" class="panas">Visitalo!</a></td>
+            </tr>
         </table>
         </div> 
         </footer>
