--- a/index.html
+++ b/index.html
@@ -277,7 +277,7 @@
                 <td><a href="https://record-dishes.000webhostapp.com/" target="_blank" class="panas">Visitalo!</a></td>
             </tr>
             <tr>
-                <td class="compañero">Angello Marcelo (pibe ruleado)</td>
+                <td class="compañero">Angello Llerena :3 (pibe ruleado)</td>
                 <td class="carrera">Computer Science</td>
                 <td><a href="https://github.com/" target="_blank" class="dominios">github</a></td>
                 <td><a href="https://angello5.github.io/Angello-Marcelo-Llerena-Gomez/" target="_blank" class="panas">Visitalo!</a></td>
