--- a/index.html
+++ b/index.html
@@ -93,7 +93,7 @@
             <tr>
                 <td class="compañero">Ricardo Coriahuamaní</td>
                 <td class="carrera">Computer Science</td>
-                <td><a href="" target="_blank" class="dominios">??</a></td>
+                <td><a href="https://byet.host/" target="_blank" class="dominios">Byethost</a></td>
                 <td><a href="http://ricardocoria.byethost12.com/" target="_blank" class="panas">Visitalo!</a></td>
             </tr>
             <tr>
