--- a/index.html
+++ b/index.html
@@ -171,7 +171,7 @@
             <tr>
                 <td class="compañero">Laleska Arroyo</td>
                 <td class="carrera">Computer Science</td>
-                <td><a href="" target="_blank" class="dominios">??</a></td>
+                <td><a href="https://www.netlify.com/" target="_blank" class="dominios">netlify</a></td>
                 <td><a href="https://practical-franklin-d0e378.netlify.app/" target="_blank" class="panas">Visitalo!</a></td>
             </tr>
             <tr>
