--- a/index.html
+++ b/index.html
@@ -372,6 +372,12 @@
                 <td><a href="https://github.com/" target="_blank" class="dominios">github</a></td>
                 <td><a href="https://luisp17-cs.github.io/" target="_blank" class="panas">Visitalo!</a></td>
             </tr>
+            <tr>
+                <td class="compañero">Franco Castillo</td>
+                <td class="carrera">Computer Science</td>
+                <td><a href="https://github.com/" target="_blank" class="dominios">github</a></td>
+                <td><a href="https://francocastillosanchez.github.io/" target="_blank" class="panas">Visitalo!</a></td>
+            </tr>
         </table>
         </div> 
         </footer>
